UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/OTC_SPA__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>OPT__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_Attachment_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analysis Attachment Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_units__c</fullName>
        <label>Annual Volume (units)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales-Created</fullName>
                    <default>true</default>
                    <label>Sales-Created</label>
                </value>
                <value>
                    <fullName>Sales-Submitted</fullName>
                </value>
                <value>
                    <fullName>Marketing-Approved</fullName>
                </value>
                <value>
                    <fullName>Marketing Director-Approved</fullName>
                </value>
                <value>
                    <fullName>Sales&amp; Marketing VP-Approved</fullName>
                </value>
                <value>
                    <fullName>Finance-Approved</fullName>
                </value>
                <value>
                    <fullName>Customer Approved</fullName>
                </value>
                <value>
                    <fullName>Contracts-Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Annual_Volume_units__c</fullName>
        <label>Current Annual Volume (units)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Price__c</fullName>
        <label>Current Contract Price</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_Effective_Date__c</fullName>
        <inlineHelpText>This value should be entered by Sales Team.</inlineHelpText>
        <label>Requested Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_in_DC_Date__c</fullName>
        <label>Estimate in-DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finished_Good_Number__c</fullName>
        <label>Finished Good Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Annual_Volume_units__c</fullName>
        <label>New Annual Volume (units)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Stores_SKU_will_be_in_distribu__c</fullName>
        <label>Number of Stores SKU will be in distribu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPT__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OTC-SPA</relationshipLabel>
        <relationshipName>OTC_SPA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pipeline_or_Flow_Behind__c</fullName>
        <label>Pipeline or Flow Behind</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Flow Behind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Effective_Date__c</fullName>
        <description>Actual Price Effective Date</description>
        <inlineHelpText>Actual Price effective Date</inlineHelpText>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Intelligence__c</fullName>
        <label>Price Intelligence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Marketing Team will update this price.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OTC-SPA</relationshipLabel>
        <relationshipName>OTC_SPA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <label>Program Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Volume__c</fullName>
        <label>Promo Volume</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU_Count_Formula__c</fullName>
        <formula>Product__r.Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_Count__c</fullName>
        <label>SKU Count</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need more information</fullName>
                </value>
                <value>
                    <fullName>Analysis completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqIdentifier__c</fullName>
        <formula>Text(Product__r.Phoenix_Pkg_Size__c) + Product__r.Strength__c + Text(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <formula>IF( Price_Intelligence__c = null, IMAGE( &quot;/img/samples/flag_red.gif&quot;, &apos;Null&apos;) ,IMAGE( &quot;/img/samples/flag_green.gif&quot;, &apos;Not-Null&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated</label>
        <type>Text</type>
    </fields>
    <label>OTC-SPA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Submitted_Date__c</columns>
        <columns>OPT__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Validated__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OTC-SPA-{0}</displayFormat>
        <label>OTC-SPA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTC-SPA</pluralLabel>
    <recordTypes>
        <fullName>New_Item</fullName>
        <active>true</active>
        <label>New Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Promotion</fullName>
        <active>true</active>
        <label>New Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>Price_Reduction</fullName>
        <active>true</active>
        <label>Price Reduction</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Analysis_attachment_should_be_entered</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
          ISPICKVAL(Status__c, &apos;Analysis completed&apos;),
          NOT(Analysis_Attachment_Uploaded__c)
)</errorConditionFormula>
        <errorDisplayField>Analysis_Attachment_Uploaded__c</errorDisplayField>
        <errorMessage>Analysis attachment should be uploaded when &apos;Analysis Completed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Price_Should_be_entered</fullName>
        <active>true</active>
        <errorConditionFormula>AND (  RecordType.Name = &apos;Price Reduction&apos;,
ISPICKVAL(Status__c, &apos;Analysis completed&apos;),
          ISBLANK(Current_Contract_Price__c)
)</errorConditionFormula>
        <errorDisplayField>Current_Contract_Price__c</errorDisplayField>
        <errorMessage>Contract Price is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marketing_User</fullName>
        <active>true</active>
        <description>Price field is required for OTC Marketing User.</description>
        <errorConditionFormula>AND(ISNULL(Price__c), $Profile.Name =&apos;OTC Marketing&apos;)</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Price field is required for Marketing User.</errorMessage>
    </validationRules>
</CustomObject>